--- a/ch1/create-stream-processor/serverless.yml
+++ b/ch1/create-stream-processor/serverless.yml
@@ -10,6 +10,6 @@ functions:
     events:
       - stream:
           type: kinesis
-          arn: ${cf:event-stream-${opt:stage}.streamArn}
+          arn: ${cf:cncb-event-stream-${opt:stage}.streamArn}
           batchSize: 100
           startingPosition: TRIM_HORIZON
