--- a/ch1/deploy-spa/serverless.yml
+++ b/ch1/deploy-spa/serverless.yml
@@ -32,6 +32,4 @@ resources:
         Ref: WebsiteBucket
     WebsiteURL:
       Value:
-        Fn::GetAtt:
-          - WebsiteBucket
-          - WebsiteURL
+        Fn::GetAtt: [ WebsiteBucket, WebsiteURL ]
