--- a/ch2/micro-event-store/serverless.yml
+++ b/ch2/micro-event-store/serverless.yml
@@ -7,7 +7,7 @@ provider:
     - Effect: Allow
       Action:
         - dynamodb:PutItem
-        - dynamodb:GetItem
+        - dynamodb:Query
       Resource:
         Fn::GetAtt: [ Table, Arn ]
   environment:
