added es plugin

--- a/ch2/data-lake-es/serverless.yml
+++ b/ch2/data-lake-es/serverless.yml
@@ -6,6 +6,7 @@ provider:
 
 plugins:
   - serverless-pseudo-parameters
+  - elasticsearch # create template (local plugin)
 
 functions:
   transformer:
