--- a/ch4/cdn-dns/serverless.yml
+++ b/ch4/cdn-dns/serverless.yml
@@ -21,4 +21,4 @@ custom:
   dns:
     hostedZoneId:  Z1234567890123
     domainName: example.com
-    endpoint: app.${self:custom.cdn.domainName}
+    endpoint: app.${self:custom.dns.domainName}
