--- a/ch4/cdn-invalidate/serverless.yml
+++ b/ch4/cdn-invalidate/serverless.yml
@@ -13,6 +13,10 @@ provider:
           - ''
           - - Fn::GetAtt: [ Bucket, Arn ]
             - '*'
+    - Effect: Allow
+      Action:
+        - cloudfront:CreateInvalidation
+      Resource: '*'
 
 functions:
   load:
