--- a/ch5/jwt-filter/serverless.yml
+++ b/ch5/jwt-filter/serverless.yml
@@ -2,6 +2,7 @@ service: cncb-jwt-filter
 
 provider:
   name: aws
+  # cfnRole: arn:aws:iam::<account-number>:role/cfnRole
   runtime: nodejs8.10
   endpointType: REGIONAL
   iamRoleStatements:
