--- a/ch5/waf/serverless.yml
+++ b/ch5/waf/serverless.yml
@@ -2,6 +2,7 @@ service: cncb-waf
 
 provider:
   name: aws
+  # cfnRole: arn:aws:iam::<account-number>:role/cfnRole
 
 plugins:
  - serverless-spa-deploy
@@ -15,6 +16,8 @@ custom:
   cdn:
     webACLId: 
       Ref: WebACL
+    # logging:
+    #   bucketName: ${cf:cncb-account-as-code-${opt:stage}.AuditBucketName}
 
 resources:
   Resources:
