--- a/ch5/custom-authorizer/serverless.yml
+++ b/ch5/custom-authorizer/serverless.yml
@@ -2,7 +2,7 @@ service: cncb-custom-authorizer
 
 provider:
   name: aws
-  # cfnRole: arn:aws:iam::<account-number>:role/cfnRole
+  # cfnRole: arn:aws:iam::<account-number>:role/${opt:stage}-cfnRole
   runtime: nodejs8.10
   endpointType: REGIONAL
 
