--- a/ch5/envelope-encryption/serverless.yml
+++ b/ch5/envelope-encryption/serverless.yml
@@ -2,7 +2,7 @@ service: cncb-envelope-encryption
 
 provider:
   name: aws
-  # cfnRole: arn:aws:iam::<account-number>:role/cfnRole
+  # cfnRole: arn:aws:iam::<account-number>:role/${opt:stage}-cfnRole
   runtime: nodejs8.10
   endpointType: REGIONAL
   iamRoleStatements:
