--- a/ch5/graphql-jwt/serverless.yml
+++ b/ch5/graphql-jwt/serverless.yml
@@ -3,7 +3,7 @@ service: cncb-graphql-jwt
 provider:
   name: aws
   runtime: nodejs8.10
-  # cfnRole: arn:aws:iam::<account-number>:role/cfnRole
+  # cfnRole: arn:aws:iam::<account-number>:role/${opt:stage}-cfnRole
 
 functions:
   graphql:
