--- a/ch5/dr/src1-account/package.json
+++ b/ch5/dr/src1-account/package.json
@@ -10,5 +10,9 @@
   "devDependencies": {
     "serverless": "1.26.0",
     "serverless-pseudo-parameters": "^1.6.0"
+  },
+  "dependencies": {
+    "moment": "^2.22.2",
+    "uuid": "^3.2.1"
   }
 }
