--- a/ch5/dr/src1-account/serverless.yml
+++ b/ch5/dr/src1-account/serverless.yml
@@ -15,9 +15,11 @@ provider:
             - '*'
 
 custom:
-  replicationBucketArn: arn:aws:s3:::cncb-${opt:stage}-us-west-2-src1-bucket1-dr
+  replicationBucketArn: arn:aws:s3:::cncb-${opt:stage}-us-west-1-src1-bucket1-dr
   recovery:
     accountNumber: '#{AWS::AccountId}' # using same account to simplify recipe
+  pseudoParameters:
+    skipRegionReplace: true
 
 plugins:
   - serverless-pseudo-parameters
