--- a/ch1/create-stack/package.json
+++ b/ch1/create-stack/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "test": "sls package -r us-east-1 -s test",
-    "dp:lcl": "sls deploy -r us-east-1",
-    "rm:lcl": "sls remove -r us-east-1"
+    "test": "sls package -v -r us-east-1 -s test",
+    "dp:lcl": "sls deploy -v -r us-east-1",
+    "rm:lcl": "sls remove -v -r us-east-1"
   },
   "devDependencies": {
     "serverless": "1.26.0"
