--- a/ch4/cdn-spa/package.json
+++ b/ch4/cdn-spa/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "react-scripts": "1.1.1",
     "serverless": "1.26.0",
-    "serverless-spa-config": "^1.0.0",
-    "serverless-spa-deploy": "^1.0.0"
+    "serverless-spa-config": "1.0.2",
+    "serverless-spa-deploy": "1.0.0"
   }
 }
