--- a/ch5/waf/package.json
+++ b/ch5/waf/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "serverless": "1.26.0",
-    "serverless-spa-config": "^1.0.2",
-    "serverless-spa-deploy": "^1.0.0"
+    "serverless-spa-config": "1.0.2",
+    "serverless-spa-deploy": "1.0.0"
   }
 }
