--- a/ch5/cognito-pool/serverless.yml
+++ b/ch5/cognito-pool/serverless.yml
@@ -18,11 +18,6 @@ resources:
             Mutable: true
             Name: 'email'
             Required: true
-          - AttributeDataType: 'String'
-            DeveloperOnlyAttribute: false
-            Mutable: true
-            Name: 'role'
-            Required: false
         AliasAttributes:
           - email
         AutoVerifiedAttributes:
@@ -71,7 +66,7 @@ resources:
       Value: 
         Fn::Join:
           - ''
-          - - https://cncb-${opt:stage}.auth.${opt:region}.amazoncognito.com/login?redirect_uri=http://localhost:3000/signin&response_type=token&client_id=
+          - - https://cncb-${opt:stage}.auth.${opt:region}.amazoncognito.com/login?redirect_uri=http://localhost:3000/implicit/callback&response_type=token&client_id=
             - Ref: CognitoUserPoolCncbClient
 
 plugins:
@@ -83,7 +78,7 @@ custom:
     allowedOAuthFlows: ['implicit']
     allowedOAuthFlowsUserPoolClient: true
     allowedOAuthScopes: ['aws.cognito.signin.user.admin', 'email', 'openid', 'phone', 'profile']
-    callbackURLs: ['http://localhost:3000/signin']
-    logoutURLs: ['http://localhost:3000/signout']
+    callbackURLs: ['http://localhost:3000/implicit/callback']
+    logoutURLs: ['http://localhost:3000']
     refreshTokenValidity: 30
     supportedIdentityProviders: ['COGNITO']
