--- a/ch7/synthetics/package.json
+++ b/ch7/synthetics/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "1.1.5",
     "react-router-dom": "4.3.1",
     "serverless": "1.26.0",
-    "serverless-spa-deploy": "^1.0.0"
+    "serverless-spa-config": "1.0.2",
+    "serverless-spa-deploy": "1.0.0"
   }
 }
