--- a/ch7/datadog-account/includes.yml
+++ b/ch7/datadog-account/includes.yml
@@ -4,41 +4,65 @@ PolicyDocument:
     Action:
       - 'autoscaling:Describe*'
       - 'budgets:ViewBudget'
+      - 'cloudfront:GetDistributionConfig'
+      - 'cloudfront:ListDistributions'
       - 'cloudtrail:DescribeTrails'
       - 'cloudtrail:GetTrailStatus'
       - 'cloudwatch:Describe*'
       - 'cloudwatch:Get*'
       - 'cloudwatch:List*'
-      - 'dynamodb:list*'
-      - 'dynamodb:describe*'
+      - 'codedeploy:List*'
+      - 'codedeploy:BatchGet*'
+      - 'directconnect:Describe*'
+      - 'dynamodb:List*'
+      - 'dynamodb:Describe*'
       - 'ec2:Describe*'
-      - 'ec2:Get*'
       - 'ecs:Describe*'
       - 'ecs:List*'
       - 'elasticache:Describe*'
       - 'elasticache:List*'
+      - 'elasticfilesystem:DescribeFileSystems'
+      - 'elasticfilesystem:DescribeTags'
       - 'elasticloadbalancing:Describe*'
       - 'elasticmapreduce:List*'
       - 'elasticmapreduce:Describe*'
       - 'es:ListTags'
       - 'es:ListDomainNames'
       - 'es:DescribeElasticsearchDomains'
+      - 'health:DescribeEvents'
+      - 'health:DescribeEventDetails'
+      - 'health:DescribeAffectedEntities'
       - 'kinesis:List*'
       - 'kinesis:Describe*'
+      - 'lambda:AddPermission'
+      - 'lambda:GetPolicy'
+      - 'lambda:List*'
+      - 'lambda:RemovePermission'
       - 'logs:Get*'
       - 'logs:Describe*'
       - 'logs:FilterLogEvents'
       - 'logs:TestMetricFilter'
+      - 'logs:PutSubscriptionFilter'
+      - 'logs:DeleteSubscriptionFilter'
+      - 'logs:DescribeSubscriptionFilters'
       - 'rds:Describe*'
       - 'rds:List*'
+      - 'redshift:DescribeClusters'
+      - 'redshift:DescribeLoggingStatus'
       - 'route53:List*'
+      - 's3:GetBucketLogging'
+      - 's3:GetBucketLocation'
+      - 's3:GetBucketNotification'
       - 's3:GetBucketTagging'
       - 's3:ListAllMyBuckets'
+      - 's3:PutBucketNotification'
       - 'ses:Get*'
       - 'sns:List*'
       - 'sns:Publish'
       - 'sqs:ListQueues'
       - 'support:*'
-    ],
+      - 'tag:GetResources'
+      - 'tag:GetTagKeys'
+      - 'tag:GetTagValues'
     Effect: Allow
     Resource: '*'
