--- a/ch8/resubmitting-faults/monitor/package.json
+++ b/ch8/resubmitting-faults/monitor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cncb-fault-monitor",
+  "name": "cncb-resubmitting-faults-monitor",
   "version": "1.0.0",
   "private": true,
   "scripts": {
