--- a/ch9/tuning-faas/package.json
+++ b/ch9/tuning-faas/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "test": "sls package -v -r us-east-1",
+    "test": "sls package -v -r us-east-1 -s test",
     "dp:lcl": "sls deploy -v -r us-east-1",
     "rm:lcl": "sls remove -r us-east-1"
   },
