--- a/ch5/jwt-filter/package.json
+++ b/ch5/jwt-filter/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "sls package -r us-east-1",
-    "dp:lcl": "sls deploy -r us-east-1",
+    "dp:lcl": "sls deploy -v -r us-east-1",
     "rm:lcl": "sls remove -r us-east-1"
   },
   "dependencies": {
