--- a/ch10/regional-health-check/package.json
+++ b/ch10/regional-health-check/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "test": "sls package -r us-east-1 -s test",
-    "dp:lcl:e": "sls deploy -r us-east-1",
-    "dp:lcl:w": "sls deploy -r us-west-2",
+    "dp:lcl:e": "sls deploy -v -r us-east-1",
+    "dp:lcl:w": "sls deploy -v -r us-west-2",
     "rm:lcl:e": "sls remove -r us-east-1",
     "rm:lcl:w": "sls remove -r us-west-2"
   },
