--- a/ch7/custom-metrics/package.json
+++ b/ch7/custom-metrics/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "sls package -r us-east-1 -s test --account cncb",
-    "dp:lcl": "sls deploy -r us-east-1 --account cncb",
+    "dp:lcl": "sls deploy -v -r us-east-1 --account cncb",
     "rm:lcl": "sls remove -r us-east-1 --account cncb"
   },
   "devDependencies": {
